--- a/gallery/Ex_4_PhaseField-NewSameSaddle.ipynb
+++ b/gallery/Ex_4_PhaseField-NewSameSaddle.ipynb
@@ -95,35 +95,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then, we define the judgement function with translational invariance."
+    "Then, we define the judgement function with normalized cross-correlation based on Fast Fourier Transform(FFT)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from numpy.fft import fft2, ifft2\n",
+    "\n",
     "def SameSaddle(x, y):\n",
-    "\tn= 64\n",
-    "\tA = x.reshape(n,n)\n",
-    "\tB = y.reshape(n,n)\n",
-    "\tepsilon = 0.05\n",
+    "    \"\"\"\n",
+    "    Determine if two solutions are equivalent under periodic translation\n",
+    "    using normalized cross-correlation based on Fast Fourier Transform.\n",
+    "    \"\"\"\n",
+    "    n = 64\n",
+    "    A = x.reshape(n, n)  \n",
+    "    B = y.reshape(n, n)  \n",
     "\n",
-    "\trow_indices = np.array([(np.arange(n) - dx) % n for dx in range(n)])\n",
-    "\tcol_indices = np.array([(np.arange(n) - dy) % n for dy in range(n)])\n",
+    "    # 2D Fourier transform\n",
+    "    fft_A = fft2(A)\n",
+    "    fft_B = fft2(B)\n",
+    "    \n",
+    "    # Calculate cross-correlation spectrum in frequency domain\n",
+    "    cross_corr_spectrum = np.conj(fft_A) * fft_B\n",
+    "    \n",
+    "    # Inverse transform back to real space\n",
+    "    real_space_corr = np.real(ifft2(cross_corr_spectrum))\n",
+    "    \n",
+    "    # Find maximum correlation value\n",
+    "    max_corr = np.max(real_space_corr)\n",
+    "    \n",
+    "    # Normalization factor (energy of A)\n",
+    "    norm_factor = np.sum(A**2)\n",
+    "    if norm_factor < 1e-7:\n",
+    "        # Handle zero field case\n",
+    "        return np.sum(B**2) < 1e-7\n",
     "\n",
-    "\trow_shifted = np.zeros((n, n, n), dtype=B.dtype)\n",
-    "\tfor dx in range(n):\n",
-    "\t\trow_shifted[dx] = B[row_indices[dx], :]\n",
+    "    # Normalized peak correlation\n",
+    "    normalized_max_corr = max_corr / norm_factor\n",
     "\n",
-    "\tfor dx in range(n):\n",
-    "\t\tfor dy in range(n):\n",
-    "\t\t\tshifted_B = row_shifted[dx][:, col_indices[dy]]\n",
-    "\t\t\tmax_diff = np.max(np.abs(A - shifted_B))\n",
-    "\t\t\tif max_diff <= epsilon:\n",
-    "\t\t\t\treturn True\n",
-    "\treturn False\n"
+    "    # Threshold for equivalence judgment\n",
+    "    if normalized_max_corr > 0.99:\n",
+    "        return True\n",
+    "    \n",
+    "    return False"
    ]
   },
   {
