--- a/gallery/Ex_1_Butterfly.ipynb
+++ b/gallery/Ex_1_Butterfly.ipynb
@@ -121,7 +121,7 @@
       "Landscape Configuration:\n",
       "------------------------------\n",
       "[Landscape] Current parameters (initialized):\n",
-      "Parameter `SameJudgementMethod` not specified - using default value <function LandscapeCheckParam.<locals>.<lambda> at 0x000002CD1746C670>.\n",
+      "Parameter `SameJudgementMethod` not specified - using default value <function LandscapeCheckParam.<locals>.<lambda> at 0x000001EC684C2B00>.\n",
       "Parameter `PerturbationMethod` not specified - using default value uniform.\n",
       "Parameter `InitialEigenVectors` not specified - using default value None.\n",
       "Parameter `SaveTrajectory` not specified - using default value True.\n",
@@ -363,7 +363,7 @@
    ],
    "source": [
     "MyLandscape.DrawConnection()\n",
-    "MyLandscape.Save('output\\Ex_Butterfly')\n",
+    "MyLandscape.Save('output/Ex_Butterfly')\n",
     "# Save the data"
    ]
   },
@@ -390,7 +390,7 @@
     "\t\t\t\"Path Times\": [row[3].tolist() for row in detail]\n",
     "\t\t}\n",
     "\n",
-    "with open('output\\Ex_ButterflyDetail.json', 'w') as f:\n",
+    "with open('output/Ex_ButterflyDetail.json', 'w') as f:\n",
     "\tjson.dump(output, f)"
    ]
   },
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,14 +561,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"output\\Ex_Butterfly.json\", \"r\") as f:\n",
+    "with open(\"output/Ex_Butterfly.json\", \"r\") as f:\n",
     "\tsaddle_data = json.load(f) # Load the data\n",
     "saddleinfo = {\"IDs\": saddle_data[\"SaddleID\"],\n",
     "\t\t\t  \"coords\": np.array(saddle_data[\"Position\"])[:, :, 0],\n",
     "\t\t\t  \"MIs\": saddle_data[\"MorseIndex\"],\n",
     "\t\t\t  \"parentIDs\": saddle_data[\"FatherSet\"]}\n",
     "\n",
-    "with open(\"output\\Ex_ButterflyDetail.json\", \"r\") as f:\n",
+    "with open(\"output/Ex_ButterflyDetail.json\", \"r\") as f:\n",
     "\ttraj_data = json.load(f) # Load the data\n",
     "trajinfo = {\"trajectories\": [np.array(traj) for traj in traj_data[\"Path Positions\"]],\n",
     "\t\t\t\"times\": [time for time in traj_data[\"Path Times\"]],\n",
@@ -591,7 +591,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ani.save(\"output\\Ex_Butterfly.mp4\", writer=\"ffmpeg\") # Must install ffmpeg"
+    "ani.save(\"output/Ex_Butterfly.mp4\", writer=\"ffmpeg\") # Must install ffmpeg"
    ]
   }
  ],
