--- a/gallery/Ex_2_MullerBrownPotential.ipynb
+++ b/gallery/Ex_2_MullerBrownPotential.ipynb
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
    ],
    "source": [
     "MyLandscape.DrawConnection()\n",
-    "MyLandscape.Save('output\\Ex_MBP','pickle')\n",
+    "MyLandscape.Save('output/Ex_MBP','pickle')\n",
     "# Save the data"
    ]
   }
