--- a/gallery/Ex_3_Cubic.ipynb
+++ b/gallery/Ex_3_Cubic.ipynb
@@ -1309,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1325,7 +1325,7 @@
    ],
    "source": [
     "MyLandscape.DrawConnection()\n",
-    "MyLandscape.Save('output\\Ex_Cubic','mat')\n",
+    "MyLandscape.Save('output/Ex_Cubic','mat')\n",
     "# Save the data"
    ]
   }
