--- a/gallery/Ex_4_PhaseField-NewKappa.ipynb
+++ b/gallery/Ex_4_PhaseField-NewKappa.ipynb
@@ -12002,7 +12002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -12018,7 +12018,7 @@
    ],
    "source": [
     "MyLandscape.DrawConnection()\n",
-    "MyLandscape.Save('output\\Ex_PhaseField_newkappa','mat')\n",
+    "MyLandscape.Save('output/Ex_PhaseField_newkappa','mat')\n",
     "# Save the data"
    ]
   },
