--- a/gallery/Ex_4_PhaseField-NewSameSaddle.ipynb
+++ b/gallery/Ex_4_PhaseField-NewSameSaddle.ipynb
@@ -2828,7 +2828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2844,7 +2844,7 @@
    ],
    "source": [
     "MyLandscape.DrawConnection()\n",
-    "MyLandscape.Save('output\\Ex_PhaseField','mat')\n",
+    "MyLandscape.Save('output/Ex_PhaseField','mat')\n",
     "# Save the data"
    ]
   },
